Bug 1816672 - Deal with async root element insertions in layout. r=dshin

Differential Revision: https://phabricator.services.mozilla.com/D171578